updates and improvements to be in sync with Java API
- supports mysql/mariadb
- testing using drone services
- swagger updates
- added delete all method
