# docs/swagger.json
@@ -20,7 +20,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/fruits": {
+        "/fruits/": {
             "get": {
                 "description": "Gets a list all available fruits from the database",
                 "produces": [
@@ -39,6 +39,24 @@
                                 "$ref": "#/definitions/db.Fruit"
                             }
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete all fruit from Database",
+                "tags": [
+                    "fruit"
+                ],
+                "summary": "Delete all fruit from Database",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     },
                     "404": {
                         "description": "Not Found",
@@ -78,6 +96,44 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/db.Fruit"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/fruits/search/{name}": {
+            "get": {
+                "description": "Gets list of fruits by name",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fruit"
+                ],
+                "summary": "Gets fruits by name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Full or partial name of the fruit",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/db.Fruit"
+                            }
                         }
                     },
                     "404": {
@@ -146,44 +202,6 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
-        "/fruits/{name}": {
-            "get": {
-                "description": "Gets list of fruits by name",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "fruit"
-                ],
-                "summary": "Gets fruits by name",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Full or partial name of the fruit",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/db.Fruit"
-                            }
-                        }
                     },
                     "404": {
                         "description": "Not Found",
